# gotoend_turtle

rokey_ws/maps/: map.pgm  map.yaml
rokey_ws/my_data/test/labels/: _img_103.txt  _img_133.txt  _img_42.txt  _img_52.txt  _img_83.txt  _img_84.txt
rokey_ws/my_data/train/labels/: _img_10.txt  _img_101.txt  _img_106.txt  _img_109.txt  _img_11.txt  _img_112.txt  _img_119.txt  _img_120.txt  _img_126.txt  _img_131.txt  _img_135.txt  _img_136.txt  (+51 more)
rokey_ws/src/hong_pkg/: package.xml  setup.py
rokey_ws/src/hong_pkg/hong_pkg/: battery_test.py  depth_goal.py  goal.py  goal2.py  main_controller.py
rokey_ws/src/hong_pkg/hong_pkg/actions/: action_base.py  drive_arc_manager.py  rotation_manager.py
rokey_ws/src/hong_pkg/hong_pkg/enums/: robot_state.py
rokey_ws/src/hong_pkg/hong_pkg/modules/: battery_processor.py  drive_commander.py  main_processor.py
rokey_ws/src/hong_pkg/hong_pkg/step/: avoid.py
rokey_ws/src/hong_pkg/hong_pkg/utils/: cv_util.py  depth_util.py  math_util.py  nav_util.py  yolo_util.py
rokey_ws/yolodata/: _img_1.txt  _img_100.txt  _img_102.txt  _img_104.txt  _img_107.txt  _img_108.txt  _img_110.txt  _img_111.txt  _img_113.txt  _img_114.txt  _img_115.txt  _img_116.txt  _img_118.txt  _img_12.txt  _img_121.txt  _img_122.txt  _img_123.txt  _img_124.txt  _img_125.txt  _img_128.txt  _img_129.txt  _img_13.txt  _img_130.txt  _img_132.txt  _img_134.txt  _img_142.txt  _img_144.txt  _img_146.txt  _img_150.txt  _img_151.txt  _img_152.txt  _img_153.txt  _img_156.txt  _img_160.txt  _img_161.txt  _img_163.txt  _img_169.txt  _img_2.txt  _img_22.txt  _img_23.txt  (+44 more)
(+18 files in other folders)
