<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hong_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mhi1248@naver.com">rokey</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
   <!-- Core ROS messages -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- TF2 -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Image + CV -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Message filters -->
  <depend>message_filters</depend>

  <!-- TurtleBot 4 Navigation -->
  <depend>turtlebot4_navigation</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
